<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:padding="12.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="16.0sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_title_video_is_downloading" />

    <TextView
        android:textColor="@color/colorAccent"
        android:gravity="end"
        android:id="@+id/progress_in_mb_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_title_progress" />

    <ProgressBar
        android:id="@+id/dvd_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <Button
            android:textColor="@color/colorAccent"
            android:id="@+id/dvd_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:text="@string/tf_btn_cancel" />

        <Button
            android:textColor="@color/colorAccent"
            android:id="@+id/dvd_btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:text="@string/tf_btn_retry" />
    </LinearLayout>
</LinearLayout>