<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:padding="8.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/dialog_anim_picker_locked_container"
        android:padding="8.0dip"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="18.0dip"
            android:layout_height="18.0dip"
            android:layout_marginEnd="4.0dip" />

        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/bs_template_ad_loading_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tf_title_loading_an_ad" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/colorAccent"
            android:id="@+id/dialog_anim_picker_template_unlock_with_ad"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tf_title_see_ad"
            android:layout_weight="1.0"
            android:layout_marginStart="4.0dip"
            android:backgroundTint="@color/colorPrimaryLessLight"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

        <Button
            android:textColor="@color/colorAccent"
            android:id="@+id/dialog_anim_picker_template_locked_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tf_title_get_premium"
            android:layout_weight="1.0"
            android:layout_marginStart="4.0dip"
            android:backgroundTint="@color/colorPrimaryLessLight"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
    </LinearLayout>
</LinearLayout>